minor code clean ups